--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "node-sass": "^4.12.0",
+    "paper": "^0.12.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-paper-bindings": "^2.0.0",
     "react-scripts": "3.0.1",
     "uuid": "^3.3.2"
   },
