--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.5.5",
     "node-sass": "^4.12.0",
     "paper": "^0.12.3",
     "prop-types": "^15.7.2",
