--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-paper-bindings": "^2.0.0",
+    "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
+    "redux": "^4.0.4",
     "uuid": "^3.3.2"
   },
   "scripts": {
